[gd_scene load_steps=21 format=3 uid="uid://cydxejijcnvuu"]

[ext_resource type="Script" path="res://controllers/scripts/fps_controller.gd" id="1_25682"]
[ext_resource type="Script" path="res://controllers/scripts/reticle.gd" id="2_2oukd"]
[ext_resource type="AudioStream" uid="uid://poljxgrd5etp" path="res://Assets/Audio/Fish_Shooter_SFX_Water_pistol.wav" id="3_ugpig"]
[ext_resource type="Script" path="res://controllers/scripts/scripts/DebugPanel.gd" id="4_70iqa"]
[ext_resource type="Script" path="res://controllers/scripts/scripts/State_Machine.gd" id="5_8i03q"]
[ext_resource type="Script" path="res://controllers/scripts/IdlePlayerState.gd" id="6_0l51m"]
[ext_resource type="Script" path="res://controllers/scripts/WalkingPlayerState.gd" id="6_lx7h7"]
[ext_resource type="Script" path="res://controllers/scripts/SprintingPlayerState.gd" id="7_ln0u6"]
[ext_resource type="Script" path="res://controllers/scripts/JumpingPlayerState.gd" id="8_672pm"]
[ext_resource type="AudioStream" uid="uid://ccmt5j8t4yxem" path="res://Assets/Audio/Fish Shooter (SFX) Character damaged.wav" id="10_ltvfq"]
[ext_resource type="AudioStream" uid="uid://cgcownukxowhj" path="res://Assets/Audio/Fish Shooter (SFX) Character died.mp3" id="11_k4jtu"]
[ext_resource type="FontFile" uid="uid://dvvco1065bgll" path="res://Assets/Font/CorleoneDue-Wp8v.ttf" id="12_5j732"]
[ext_resource type="Theme" uid="uid://dep72rvv42iop" path="res://Assets/UI/Themes/Debug_theme.tres" id="13_orqnj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hmu05"]
radius = 0.25
height = 1.0

[sub_resource type="Animation" id="Animation_kfc02"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainCamera:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MainCamera:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MainCamera:position:z")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.44646, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_1saby"]
resource_name = "Sprinting"
length = 2.0
loop_mode = 1
step = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainCamera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.20011, -0.25, 0, 0.2, -0.000786215, 0.0570176, -0.2, 0.0275178, 0.2, -0.0165107, -0.0475498, -0.2, 0.0298764, 0.2, -0.028304, -0.200077, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainCamera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.148219, -0.25, 0, 0.25, 0, -0.0499085, -0.25, 0, 0.25, 0, 0.149006, -0.25, 0, 0.25, 0, -0.0506947, -0.25, 0, 0.25, 0, 0.000409692, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainCamera:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 1.8)
}

[sub_resource type="Animation" id="Animation_ol55s"]
resource_name = "Walking"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.150578, -0.25, 0, 0.25, 0, 2.8086e-06, -0.25, 0, 0.25, 0, -0.149759, -0.25, 0, 0.25, 0, 2.8086e-06, -0.25, 0, 0.25, 0, 0.149792, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.000409693, -0.25, 0, 0.25, 0, 0.0979012, -0.4, -0.0314489, 0.4, -0.0338075, -0.000376523, -0.25, 0, 0.25, 0, 0.0986874, -0.4, -0.0275178, 0.4, -0.028304, 0.000409693, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlt0c"]
_data = {
"RESET": SubResource("Animation_kfc02"),
"Sprinting": SubResource("Animation_1saby"),
"Walking": SubResource("Animation_ol55s")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w6rqi"]

[sub_resource type="Theme" id="Theme_wy3ug"]

[node name="FPS_Controller" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER", "ANIMATIONPLAYER")]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_25682")
CAMERA_CONTROLLER = NodePath("CameraController/MainCamera")
ANIMATIONPLAYER = NodePath("CameraController/cameraAnimation")
MAX_HP = 100

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["player"]]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_hmu05")

[node name="CameraController" type="Node3D" parent="."]

[node name="cameraAnimation" type="AnimationPlayer" parent="CameraController"]
libraries = {
"": SubResource("AnimationLibrary_qlt0c")
}

[node name="MainCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.44646)
fov = 90.0

[node name="BulletSpawner" type="Node3D" parent="CameraController/MainCamera"]

[node name="AudioBulletSFX" type="AudioStreamPlayer3D" parent="CameraController/MainCamera/BulletSpawner"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.95646)
stream = ExtResource("3_ugpig")
max_polyphony = 30

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="UserInterface" node_paths=PackedStringArray("RECTICLE_LINES", "PLAYER_CONTROLLER")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2oukd")
RECTICLE_LINES = [NodePath("Top"), NodePath("Right"), NodePath("Bottom"), NodePath("Left")]
PLAYER_CONTROLLER = NodePath("../..")

[node name="Top" type="Line2D" parent="UserInterface/CenterContainer"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="UserInterface/CenterContainer"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="UserInterface/CenterContainer"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UserInterface/CenterContainer"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPannel" type="PanelContainer" parent="UserInterface"]
layout_mode = 0
offset_left = 10.37
offset_top = 10.0
offset_right = 50.37
offset_bottom = 50.0
script = ExtResource("4_70iqa")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPannel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPannel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_8i03q")
CURRENT_STATE = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_0l51m")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_lx7h7")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("7_ln0u6")

[node name="JumpingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_672pm")

[node name="AreaDetectingHits" type="Area3D" parent="."]
collision_mask = 12

[node name="AudioPlayerDeath" type="AudioStreamPlayer3D" parent="AreaDetectingHits"]
stream = ExtResource("11_k4jtu")
volume_db = 10.0

[node name="AudioPlayerisHitt" type="AudioStreamPlayer3D" parent="AreaDetectingHits"]
stream = ExtResource("10_ltvfq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaDetectingHits"]
transform = Transform3D(9.55343e-16, 2.18557e-08, 0.5, 0.5, -2.18557e-08, 0, 2.18557e-08, 0.5, -2.18557e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_w6rqi")

[node name="PlayersHP" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="PlayersHP"]
layout_mode = 0
offset_top = 15.0
offset_right = 300.0
offset_bottom = 86.0

[node name="Panel" type="Panel" parent="PlayersHP/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme = SubResource("Theme_wy3ug")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayersHP/PanelContainer/Panel"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 71.0

[node name="HP" type="Label" parent="PlayersHP/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.521569, 0, 1)
theme_override_fonts/font = ExtResource("12_5j732")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="PlayersHP/PanelContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(1, 25)
layout_mode = 2
size_flags_vertical = 2
auto_translate = false
localize_numeral_system = false
theme = ExtResource("13_orqnj")
theme_override_colors/font_color = Color(1, 0.521569, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("12_5j732")
step = 1.0
show_percentage = false

[connection signal="body_entered" from="AreaDetectingHits" to="." method="_on_area_detecting_hits_body_entered"]
